[package]
name = "gecko_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[target.'cfg(target_os = "linux")'.dependencies]
flate2 = "1.0"
tar = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "0.6"


[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }